# cooker

./: CMakeLists.txt
cmake/: cmake_rmdownloads.cmake.in
cmake/modules/: FindCLHEP.cmake  FindFFTW3.cmake  FindROOT.cmake  downloader.cmake
doc/: doxygen.conf
include/: InitReader.h  MCGenPlugin.h  MCTracker.h  Magnetic_Field.h  Plugin.h  RecipeReader.h  TreeSearch.h  chef.h  cookerrawtree.h  generatortree.h  genericmap.h  mctree.h
init/: MCGenPlugin.xml  MCPropPlugin.xml  copy.xml  demo.xml  demo.xsd
recipes/: copy.xml  demo.xml
recipes/MC/: bhabha.xml  born.xml  cosmic.xml  fixed.xml  isotropic.xml  moeller.xml  moellerbhabha_MIT.xml  noise.xml  novosibirsk.xml  pion.xml  propagate.xml  propagate_supBrem.xml  radiative.xml  symb_radiative_MIT.xml
src/: CMakeLists.txt
src/Chef/: CMakeLists.txt
src/Chef/src/: chef.cpp
src/InitReader/: CMakeLists.txt
src/InitReader/src/: InitReader.cpp
src/MagneticField/: CMakeLists.txt
src/MagneticField/include/: printfcolors.h  segGen.h  spline_interp.h  spline_mat.h
src/MagneticField/src/: NoInterp_Magnetic_Field.cpp  Old_Magnetic_Field.cpp  Spline_Field.cpp  segGen.cc  spline_interp.cpp
src/Plugin/: CMakeLists.txt
src/Plugin/src/: Plugin.cpp
src/Plugin/src/db-schema/: comments.sql  data.sql  tags.sql
src/Plugin/src/include/: LinkDef.hh
src/RecipeReader/: CMakeLists.txt
src/RecipeReader/src/: RecipeReader.cpp
src/Reconstruction/: CMakeLists.txt
src/Reconstruction/TreeSearch/: CMakeLists.txt  PatternCheckBS177.cc  PatternCheckBS180.cc  PatternCheckBS70.cc  PatternCheckULL.cc  PatternPackerBS177.cc  PatternPackerBS180.cc  PatternPackerBS70.cc  PatternPackerULL.cc
src/alacarte/: CMakeLists.txt
src/alacarte/src/: alacarte.cpp  checkpivotmodel.cpp  database.cpp  mainwindow.cpp
src/alacarte/src/include/: checkpivotmodel.h  database.h  mainwindow.h
src/combine/: CMakeLists.txt
src/combine/src/: combine.cpp
src/cooker/: CMakeLists.txt
src/cooker/src/: cooker.cpp
src/plugins/: CMakeLists.txt
src/plugins/MCpropagators/: CMakeLists.txt
src/plugins/MCpropagators/Geant4/: CMakeLists.txt
src/plugins/MCpropagators/Geant4/detectorlib/: CMakeLists.txt
src/plugins/MCpropagators/Geant4/detectorlib/include/: base_SD.h  cookerDetector.h
src/plugins/MCpropagators/Geant4/detectorlib/src/: base_sd.cpp  detector.cpp
src/plugins/MCpropagators/Geant4/plugin/: CMakeLists.txt
src/plugins/MCpropagators/Geant4/plugin/init/: MCPropGeant4.xml
src/plugins/MCpropagators/Geant4/plugin/src/: MCPropGeant4.cpp  Physics.cpp  cookerGen.cpp  cookerRM.cpp
src/plugins/MCpropagators/Geant4/plugin/src/include/: LinkDef.hh  MCPropGeant4.h  Physics.h  cookerGen.h  cookerRM.h
src/plugins/example/: CMakeLists.in  init.sh
src/plugins/example/init/: example.xml  example.xsd
src/plugins/example/src/: Det_example.cpp
src/plugins/example/src/include/: Det_example.h  Link.hh
src/plugins/tools/: CMakeLists.txt
src/plugins/tools/Copy/: CMakeLists.txt
src/plugins/tools/Copy/init/: Copy.xml  copyForDigit.xml
src/plugins/tools/Copy/src/: Det_Copy.cpp
src/plugins/tools/Copy/src/include/: Det_Copy.h  LinkDef.hh
src/plugins/tools/Macro/: CMakeLists.txt
src/plugins/tools/Macro/src/: Det_Macro.cpp
src/plugins/tools/Macro/src/include/: Det_Macro.h  LinkDef.hh
src/tree/: CMakeLists.txt
src/tree/src/: cookerrawtree.cpp  generatortree.cpp  mctree.cpp
src/tree/src/include/: LinkDef.hh
src/treeinfo/: CMakeLists.txt
src/treeinfo/src/: treeinfo.cc
src/udpLog/: CMakeLists.txt
src/udpLog/src/: udpLog.cpp
src/visualcooker/: CMakeLists.txt
src/visualcooker/src/: controlwindow.cpp  visualcooker.cpp
src/visualcooker/src/include/: LinkDef.hh  controlwindow.h
