# Check if cmake has the required version
CMAKE_MINIMUM_REQUIRED(VERSION 2.4.3 FATAL_ERROR)
# Needed for cmake 2.6
IF(COMMAND cmake_policy)
	cmake_policy(SET CMP0003 NEW)
ENDIF(COMMAND cmake_policy)

# Set project name
PROJECT(Macro)


# Set the library version
SET(MACRO_MAJOR_VERSION 1)
SET(MACRO_MINOR_VERSION 1)
SET(MACRO_PATCH_VERSION 0)
SET(MACRO_VERSION "${MACRO_MAJOR_VERSION}.${MACRO_MINOR_VERSION}.${MACRO_PATCH_VERSION}")
LIST(APPEND MACRO_LIBRARY_PROPERTIES VERSION "${MACRO_VERSION}" SOVERSION "${MACRO_MAJOR_VERSION}")

# find source and header files, set paths, includes...
SET(LIBNAME "Macro")


FILE(GLOB SRCS src/*.cpp)
FILE(GLOB HEADERS src/include/*.h ${CMAKE_SOURCE_DIR}/include/cookerrawtree.h)

SET(INCLUDES ${ROOT_INCLUDE_DIR} "${CMAKE_CURRENT_SOURCE_DIR}/src/include" "${CMAKE_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES(${INCLUDES})

# create root dictionary
SET(LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/src/include/LinkDef.hh)
SET(DICTIONARY ${CMAKE_CURRENT_BINARY_DIR}/${LIBNAME}Dict.cpp)
ROOT_GENERATE_DICTIONARY("${HEADERS}" "${LINKDEF}" "${DICTIONARY}" "${INCLUDES}")
LIST(APPEND SRCS ${DICTIONARY})

# build the library
ADD_LIBRARY(${LIBNAME} SHARED ${SRCS})
TARGET_LINK_LIBRARIES(${LIBNAME}  cookerrawtree Plugin  "-L${ROOT_LIBRARY_DIR}" Core Cint)

SET_TARGET_PROPERTIES(${LIBNAME} PROPERTIES ${MACRO_LIBRARY_PROPERTIES})


# install the library
INSTALL(TARGETS ${LIBNAME} RUNTIME DESTINATION ${BINDIR} LIBRARY DESTINATION ${LIBDIR} ARCHIVE DESTINATION ${LIBDIR})

