# Check if cmake has the required version
CMAKE_MINIMUM_REQUIRED(VERSION 2.4.3 FATAL_ERROR)
# Needed for cmake 2.6
IF(COMMAND cmake_policy)
	cmake_policy(SET CMP0003 NEW)
ENDIF(COMMAND cmake_policy)

# Set project name
PROJECT(MCPropGeant4)



# Set the library version
SET(MCPROPGEANT4_MAJOR_VERSION 1)
SET(MCPROPGEANT4_MINOR_VERSION 1)
SET(MCPROPGEANT4_PATCH_VERSION 0)
SET(MCPROPGEANT4_VERSION "${MCPROPGEANT4_MAJOR_VERSION}.${MCPROPGEANT4_MINOR_VERSION}.${MCPROPGEANT4_PATCH_VERSION}")
LIST(APPEND MCPROPGEANT4_LIBRARY_PROPERTIES VERSION "${MCPROPGEANT4_VERSION}" SOVERSION "${MCPROPGEANT4_MAJOR_VERSION}")


# find source and header files, set paths, includes...
SET(LIBNAME "MCPropGeant4")


FILE(GLOB SRCS src/*.cpp)
FILE(GLOB HEADERS src/include/MCPropGeant4.h ${CMAKE_SOURCE_DIR}/include/cookerrawtree.h)

SET(INCLUDES ${ROOT_INCLUDE_DIR}
"${CMAKE_CURRENT_SOURCE_DIR}/src/include"
"${CMAKE_CURRENT_SOURCE_DIR}/../detectorlib/include"
"${CMAKE_SOURCE_DIR}/include" )
INCLUDE_DIRECTORIES(${INCLUDES})

INCLUDE_DIRECTORIES(${Geant4_INCLUDE_DIRS})


# create root dictionary
SET(LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/src/include/LinkDef.hh)
SET(DICTIONARY ${CMAKE_CURRENT_BINARY_DIR}/${LIBNAME}Dict.cpp)
ROOT_GENERATE_DICTIONARY("${HEADERS}" "${LINKDEF}" "${DICTIONARY}" "${INCLUDES}")
LIST(APPEND SRCS ${DICTIONARY})

# build the library
ADD_LIBRARY(${LIBNAME} SHARED ${SRCS})
TARGET_LINK_LIBRARIES(${LIBNAME}  cookerrawtree Plugin detector
"-L${ROOT_LIBRARY_DIR}" Core Cint Geom Eve ${Geant4_LIBRARIES} "${CLHEP_LIBRARIES}")

SET_TARGET_PROPERTIES(${LIBNAME} PROPERTIES ${MCPROPGEANT4_LIBRARY_PROPERTIES})


# install the library
INSTALL(TARGETS ${LIBNAME} RUNTIME DESTINATION ${BINDIR} LIBRARY DESTINATION ${LIBDIR} ARCHIVE DESTINATION ${LIBDIR})

INSTALL (FILES init/MCPropGeant4.xml DESTINATION "../shared/init")
